--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -82,12 +82,17 @@ section {
 }
 
 .fa-trash-can {
+	position: relative;
+	bottom: 103px;
+	right: 25px;
+	margin-right: -10px;
 	color: white;
 	background-color: black;
-	height: 14px;
-	width: 12.5px;
+	height: 9px;
+	width: 9px;
 	padding: 5px;
 	border-radius: 2px;
+	font-size: 10px;
 }
 
 .modale {
@@ -106,7 +111,7 @@ section {
 
 .modale h2 {
 	position: relative;
-	left: 30px;
+	left: 140px;
 	top: 40px;
 	font-size: 26px;
 	font-weight: 400;
@@ -118,7 +123,7 @@ section {
 	cursor: pointer;
 	position: relative;
 	top: 20px;
-	left: 390px;
+	left: 484px;
 	font-size: 18px;
 }
 
@@ -133,14 +138,17 @@ section {
 .galery__modale {
 	position: relative;
 	top: 75px;
+	left: 5px;
 	border-bottom: 1px solid #b3b3b3;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	padding-bottom: 50px;
 }
 
 .galery__modale img {
 	width: 76.61px;
 	height: 102.06px;
+	padding-bottom: 20px;
 }
 
 .galery__modale img .fa-trash-can {
@@ -152,7 +160,8 @@ section {
 .button__pictures {
 	cursor: pointer;
 	position: relative;
-	top: 570px;
+	top: 130px;
+	left: 90px;
 	border-radius: 60px;
 	background-color: #1D6154;
 	color: white;
@@ -163,6 +172,7 @@ section {
 	font-weight: 700;
 	font-size: 14px;
 	width: 237px;
+	font-family: "Syne";
 }
 
 .modale__adding {
@@ -212,6 +222,7 @@ section {
 	font-weight: 700;
 	font-size: 14px;
 	width: 237px;
+	font-family: "Syne";
 }
 
 .picture__adding {
