--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -104,7 +104,7 @@ section {
 	width: 630px;
 	position: relative;
 	left: 450px;
-	top: 500px;
+	top: 380px;
 	margin-bottom: -688px;
 	border-radius: 10px;
 }
@@ -130,7 +130,7 @@ section {
 .fa-arrow-left {
 	cursor: pointer;
 	position: relative;
-	top: 20px;
+	top: 22px;
 	right: 95px;
 	font-size: 18px;
 }
@@ -184,7 +184,7 @@ section {
 	width: 630px;
 	position: relative;
 	left: 450px;
-	top: 500px;
+	top: 380px;
 	margin-bottom: -688px;
 	border-radius: 10px;
 }
@@ -233,6 +233,20 @@ section {
 	height: 169px;
 	background-color: #e8f1f6;
 	border-radius: 10px;
+}
+
+.error-message {
+	position: relative;
+	top: 380px;
+	left: 25px;
+}
+
+.picture__adding img {
+	position: relative;
+	left: 140px;
+	height: 169px;
+	width: 129px;
+	z-index: 16;
 }
 
 .picture__adding p {
@@ -286,6 +300,17 @@ section {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 	background-color: white;
+	appearance: none;
+	padding-left: 20px;
+}
+
+.fa-chevron-down {
+	position: relative;
+	left: 380px;
+	bottom: 32px;
+	font-size: 12px;
+	color: #a7a7a7;
+	margin-bottom: -12px;
 }
 
 .titre--groupe {
@@ -312,6 +337,9 @@ section {
 	position: relative;
 	top: 360px;
 	border: 1px solid #b3b3b3;
+	border-top: none;
+	border-right: none;
+	border-left: none;
 }
 
 h1{
@@ -415,6 +443,7 @@ li:hover {
 	position: relative;
 	left: 750px;
 	bottom: 7px;
+	width: 100px;
 }
 
 .edit--mode .fa-pen-to-square {
@@ -433,6 +462,7 @@ li:hover {
 	position: relative;
 	left: 700px;
 	bottom: 50px;
+	width: 150px;
 	/*margin-bottom: -50px;*/
 }
 
@@ -443,6 +473,7 @@ li:hover {
 	position: relative;
 	left: 15px;
 	bottom: 15px;
+	width: 100px;
 }
 
 .edit .fa-pen-to-square {
